--- a/node-app/package.json
+++ b/node-app/package.json
@@ -12,7 +12,7 @@
     "dotenv": "^9.0.2",
     "express": "~4.16.1",
     "fs": "0.0.1-security",
-    "node-vault": "0.9.21",
+    "node-vault": "^0.9.21",
     "morgan": "~1.9.1",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2",
