--- a/node-app/package.json
+++ b/node-app/package.json
@@ -12,11 +12,13 @@
     "dotenv": "^9.0.2",
     "express": "~4.16.1",
     "fs": "0.0.1-security",
-    "node-vault": "^0.9.21",
     "morgan": "~1.9.1",
+    "node-vault": "^0.9.21",
+    "nodemon": "^2.0.7",
+    "socket.io": "^4.3.2",
     "swagger-ui-express": "^4.1.6",
+    "util": "^0.12.4",
     "uuid": "^8.3.2",
-    "yamljs": "^0.3.0",
-    "nodemon": "^2.0.7"
+    "yamljs": "^0.3.0"
   }
 }
